--- a/index.html
+++ b/index.html
@@ -42,9 +42,74 @@
                 <div class="player">
                     <img src="images/players/player-1.png" alt="">
                     <h2>Neymar Jr</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed distinctio nobis modi,
-                        voluptate
-                        accusamus ad!</p>
+                    <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays
+                        as a forward for Ligue 1 club Paris Saint-Germain</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2>Lionel Messi</h2>
+                    <p>Lionel "Leo" Andrés Messi is an Argentine professional footballer who plays for and captains the
+                        Argentina national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2>Cristiano Ronaldo</h2>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays
+                        as a forward for Serie A club</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2>Paulo Dybala</h2>
+                    <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for Serie A
+                        club Juventus and the Argentina national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2>Mesut Ozil </h2>
+                    <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig
+                        club Fenerbahçe. Nicknamed "The Assist King</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2>Mauro Icardi</h2>
+                    <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1
+                        club Paris Saint-Germain and the Argentina national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h2>Di Maria</h2>
+                    <p>Ángel Fabián di María is an Argentine professional footballer who plays for Ligue 1 club Paris
+                        Saint-Germain and the Argentina national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h2>Kylian Mbappé</h2>
+                    <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club
+                        Paris Saint-Germain and the France national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h2>Mohamed Salah</h2>
+                    <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward
+                        for Premier League club Liverpool </p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h2>Harry Kane</h2>
+                    <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for Premier
+                        League club Tottenham Hotspur and captains the England national team.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h2>Kevin De Bruyne</h2>
+                    <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League
+                        club Manchester City, where he is vice-captain</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h2>Philippe Coutinho</h2>
+                    <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking
+                        midfielder or winger for La Liga club Barcelona and the Brazil national team.</p>
                 </div>
             </div>
         </section>
