complete footer section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,56 @@
                 </div>
             </div>
         </section>
+        <!-- Statistics and Join Now Area -->
+        <section class="main-area">
+            <div class="statistics-area">
+                <div class="statistics-item">
+                    <div>
+                        <h1>200</h1>
+                        <p>Matches</p>
+                    </div>
+                    <div>
+                        <h1>17</h1>
+                        <p>TRAINERS</p>
+                    </div>
+                    <div>
+                        <h1>123</h1>
+                        <p>PLAYERS</p>
+                    </div>
+                    <div>
+                        <h1>12</h1>
+                        <p>AWARD</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="join-area">
+                <div class="join-container">
+                    <form action="" class="join-form">
+                        <h2>Join Our Club</h2>
+                        <input type="text" placeholder="First Name">
+                        <input type="text" placeholder="Last Name">
+                        <input type="email" name="email" placeholder="Your Email" id="">
+                        <input type="password" name="password" placeholder="Enter a password" id="">
+                        <button type="submit">Join Now</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
+    <!-- Footer Area -->
+    <footer>
+        <div class="footer-image">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="social-icon">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+        <p><span>Copyright</span> <i class="far fa-copyright"> </i><span>2022 Football</span></p>
+    </footer>
 </body>
 
 </html>
