--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social-icon">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-youtube"></i>
+            <a target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+            <a target="_blank" href="https://twitter.com/?lang=en"><i class="fab fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
         </div>
         <p><span>Copyright</span> <i class="far fa-copyright"> </i><span>2022 Football</span></p>
     </footer>
